--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
 		      <div class="item" data-ng-repeat="item in recommendationCtrl.items">
-		      	{{item.Publication_URL}}
+		      	{{item.Publication_title}}
 		      </div>
 					<!-- 
 					<div style="text-align:center"><img data-ng-hide="searchIndicatorStopped" src="images/search_loading.gif" alt="loading indicator" /></div>
@@ -198,7 +198,7 @@
 					</div>
 	 				-->	
 
-					<div class="ui icon message">
+					<div class="ui icon message" data-ng-show="recommendationCtrl.selectedPair == ''">
 					  <i class="info icon"></i>
 						<div class="content">			 
 						  <div class="header">
