remove old wikirate logo

--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
             <p>&copy; 2015, Sandbox for Wikirate by <abbr title="Centre for Research and Technology - Hellas">CERTH</abbr> / <abbr title="Information Technologies Institute">ITI</abbr></p>
           </div>
           <div class="column">
-						<img src="images/wikirate_wp5.png" alt="The logo of wikirate project" />
+						<!-- <img src="images/wikirate_wp5.png" alt="The logo of wikirate project" /> -->
+						<h1 class="ui header" style="color: white;">Wiki<strong>Rate</strong> WP5</h1>
           </div>
         </div>
       </div>
